--- a/assets/style.css
+++ b/assets/style.css
@@ -11,3 +11,22 @@
     font-size: 62.5%;
     font-family: 'Nova Square', cursive;
 }
+
+h1 {
+    font-size: 5.4rem;
+    color: #fff;
+    margin-bottom: 5rem;
+}
+
+h2 {
+    font-size: 4.2rem;
+    margin-bottom: 4rem;
+}
+
+.container {
+    width: 100vw;
+    height: 200vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
