added style properties to buttons, such as button size, color, border-radius, changed font-size of text inside the buttons and more.

--- a/assets/style.css
+++ b/assets/style.css
@@ -55,3 +55,19 @@ h2 {
 .hidden {
     display: none;
 }
+
+.btn {
+    font-size: 2.4 rem;
+    padding: 2rem 0;
+    width: 30rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color: rgb(28, 26, 26);
+    background: linear-gradient(90deg, rgb(18, 92, 255) 0%, rgb(0, 102, 255) 100%);
+    border-radius: 12px;
+}
+
+.btn {
+    font-size: 2.5rem;
+}
