--- a/game/style.css
+++ b/game/style.css
@@ -12,7 +12,19 @@ body {
     min-width: 80rem;
 }
 
-.choice-container:hocer {
+.choice-container:hover {
     cursor: pointer;
     box-shadow: 0 0.4rem 1.4rem 0 rgba(6, 103, 247, 0.5);
+    transform: scale(1.02);
+    transform: transform 100ms;
+}
+
+.choice-prefix {
+    padding: 2rem 2.5rem;
+    color: white;
+}
+
+.choice-text {
+    padding: 2rem;
+    width: 100%;
 }
