added media quarries to choice container.

--- a/game/style.css
+++ b/game/style.css
@@ -28,3 +28,9 @@ body {
     padding: 2rem;
     width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+    .choice-container {
+        min-width: 40rem;
+    }
+}
