--- a/game/style.css
+++ b/game/style.css
@@ -37,6 +37,22 @@ body {
     background: linear-gradient(32deg, rgba(230, 11, 11, 1) 0% rgb(41, 232, 111) 100%);
 }
 
+/* Heads Up Display */
+
+#hud {
+    display: flex;
+    justify-content: space-between;
+}
+
+.hud-prefix {
+    text-align: center;
+    font-size: 2rem;
+}
+
+.hud-main-text {
+    text-align: center;
+}
+
 @media screen and (max-width: 768px) {
     .choice-container {
         min-width: 40rem;
