added style properties to progress bar, and also edited the class name for .progressBar.

--- a/game/style.css
+++ b/game/style.css
@@ -53,9 +53,23 @@ body {
     text-align: center;
 }
 
+#progressBar {
+    width: 20rem;
+    height: 3rem;
+    border: 0.2rem solid rgb(11,223,36);
+    margin-top: 2rem;
+    border-radius: 50px;
+    overflow: hidden;
+}
+
+#progressBarFull {
+    height: 100%;
+    background: rgb(11, 223, 36);
+    width: 0%;
+}
+
 @media screen and (max-width: 768px) {
     .choice-container {
         min-width: 40rem;
     }
 }
-
